--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,16 @@ span {
     display: inline-block;
 }
 
+section:nth-child(even) span {
+    background-color: rgb(47, 124, 246)
+}
+
+section:nth-child(odd) span {
+    background-color: rgb(229, 228, 234)
+}
+
 section {
-    margin-bottom: 2em;
+    margin: 2em;
 }
 
 section:nth-child(even) {
@@ -16,7 +24,22 @@ section:nth-child(even) {
 article {
     width: 50%;
     margin: auto;
-    padding: 1em;
     border: 5px solid black;
     border-radius: 1em;
+}
+
+#padTray {
+    height: 3em;
+    border-top: 5px solid black;
+    width: 100%;
+    align-content: center;
+}
+
+#homeButton {
+    border-radius: 100%;
+    height: 1.5em;
+    width: 1.5em;
+    border: 3px solid black;
+    margin: 1em auto 0 auto;
+    align-self: center;
 }
